added content in the HTML framework

--- a/executive/index.html
+++ b/executive/index.html
@@ -1,55 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 ​
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Boob Ross</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Boob Ross</title>
 </head>
 ​
+
 <body>
-​
-  <h1 class="name">Bob Ross</h1>
-​
-  <h2 class="topic">Excutive Summary</h2>
-​
-  <!-- id will be classified as the topic of your page -->
-  <section id="Executive">
-    <article>
-      <h3 class="sub-topic">Known collaborators with the artists </h3>
-      <div>
-        <!-- Whats inside this div may be a <p> element or a <ul> -->
-        <p>ghjkdfghjkdfghjk</p>
-      </div>
-​
-      <h3 class="sub-topic">A portrait of the artist. This component should have a photo and name.</h3>
-      <div>
-        <!-- If you need an image to be displayed use <img src="" alt=""> element -->
-        <p>fghjklfghjkfghjklcfvgbn</p>
-      </div>
-​
-      <h3 class="sub-topic">List of known aliases.</h3>
-      <div>
-        <p>sdfghjkdfghjkdfghjkl</p>
-      </div>
-​
-      <h3 class="sub-topic">Country of residence.</h3>
-      <div>
-        <p>dfghjkldfghjkcvbnmkl</p>
-      </div>
-​
-    </article>
-  </section>
-​
-​
-​
+    ​
+    <h1 class="name">Bob Ross</h1>
+    ​
+    <h2 class="topic">Excutive Summary</h2>
+    ​
+    <!-- id will be classified as the topic of your page -->
+    <section id="Executive">
+        <article>
+            <h3 class="sub-topic">A portrait of the artist. This component should have a photo and name.</h3>
+            <div>
+                <img src="https://en.wikipedia.org/wiki/Bob_Ross#/media/File:Bob_at_Easel.jpg" alt="bob ross">
+                <!-- If you need an image to be displayed use <img src="" alt=""> element -->
+                <p>Robert Norman Ross</p>
+            </div>
+
+            <h3 class="sub-topic">Known collaborators with the artists </h3>
+            <div>
+                <ul>
+                    <ol>In 1987, Hank Snow at the Grand Ole Opry in Nashville, Tennessee, welcomed Ross to the stage.
+                    </ol>
+                    <ol>Joan Alexandra Molinsky, known professionally as Joan Rivers, had Ross appear on The Joan Rivers
+                        Show</ol>
+                    <ol>In the early 1990s, Ross did several MTV promotional spots</ol>
+                </ul>
+                <!-- Whats inside this div may be a <p> element or a <ul> -->
+            </div>
+            ​
+            <h3 class="sub-topic">List of known aliases.</h3>
+            <div>
+                <ul>
+                    <ol>Bob Ross</ol>
+                    <ol>Ross</ol>
+                </ul>
+            </div>
+            ​
+            <h3 class="sub-topic">Country of residence.</h3>
+            <div>
+                <p>Bob Ross lived in New Smyrna Beach, Florida, United States. Prior to living in
+                    Smyrna Beach, where he lived and died. Bob Ross served as a master sergeant of the
+                    U.S. Air Force Clinic at Eielson Air Force Base in Alaska.</p>
+            </div>
+            ​
+        </article>
+    </section>
+    ​
+    ​
+    ​
 </body>
 ​
 <footer>
-​
-​
+    ​
+    ​
 </footer>
 ​
 ​
+
 </html>
