added information fields

--- a/personal/personal.html
+++ b/personal/personal.html
@@ -20,28 +20,43 @@
             <h3 class="sub-topic">Birth Name</h3>
             <div>
                 <!-- Whats inside this div may be a <p> element or a <ul> -->
-                <p>ghjkdfghjkdfghjk</p>
+                <p>Robert Norman Ross</p>
             </div>
 
             <h3 class="sub-topic">Birthday</h3>
             <div>
                 <!-- If you need an image to be displayed use <img src="" alt=""> element -->
-                <p>fghjklfghjkfghjklcfvgbn</p>
+                <p>October 29, 1942</p>
             </div>
 
             <h3 class="sub-topic">Country of Origin</h3>
             <div>
-                <p>sdfghjkdfghjkdfghjkl</p>
+                <p>Daytona Beach, Florida, U.S.</p>
             </div>
 
             <h3 class="sub-topic">Country of Residence</h3>
             <div>
-                <p>dfghjkldfghjkcvbnmkl</p>
+                <p>Orlando, Florida, U.S.</p>
+            </div>
+
+            <h3 class="sub-topic">Death Date</h3>
+            <div>
+                <p>July 4, 1995 (aged 52)</p>
             </div>
 
             <h3 class="sub-topic">Immediate Family</h3>
             <div>
-                <p>dfghjkldfghjkcvbnmkl</p>
+                <p class="wives">Wives</p>
+                    <ul>
+                        <li>Vivian Ridge (m. 1965; div. 1977)</li>
+                        <li>Jane Ross    (m. 1977; died 1992)</li>
+                        <li>Lynda Brown  (m. 1995)</li>
+                    </ul>
+                <p class="children">Children</p>
+                    <ul>
+                        <li>Steven Ross (Son)</li>
+                        <li>Morgan (Son)</li>
+                    </ul>
             </div>
 
         </article>
