added some css and edited h3s in HTML

--- a/executive/index.html
+++ b/executive/index.html
@@ -6,12 +6,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Boob Ross</title>
+    <link rel="stylesheet" href="/executive/executive.css">
+    <title>Bob Ross</title>
 </head>
 ​
 
 <body>
-    ​
+    ​ 
     <h1 class="name">Bob Ross</h1>
     ​
     <h2 class="topic">Excutive Summary</h2>
@@ -19,14 +20,15 @@
     <!-- id will be classified as the topic of your page -->
     <section id="Executive">
         <article>
-            <h3 class="sub-topic">A portrait of the artist. This component should have a photo and name.</h3>
+            <!-- Each topic in artivle will have a class that = to "sub-topic" -->
+            <h3 class="sub-topic">A portrait of Bob Ross</h3>
             <div>
                 <img src="https://en.wikipedia.org/wiki/Bob_Ross#/media/File:Bob_at_Easel.jpg" alt="bob ross">
                 <!-- If you need an image to be displayed use <img src="" alt=""> element -->
                 <p>Robert Norman Ross</p>
             </div>
 
-            <h3 class="sub-topic">Known collaborators with the artists </h3>
+            <h3 class="sub-topic">Known collaborators with the artists</h3>
             <div>
                 <ul>
                     <ol>In 1987, Hank Snow at the Grand Ole Opry in Nashville, Tennessee, welcomed Ross to the stage.
@@ -35,7 +37,6 @@
                         Show</ol>
                     <ol>In the early 1990s, Ross did several MTV promotional spots</ol>
                 </ul>
-                <!-- Whats inside this div may be a <p> element or a <ul> -->
             </div>
             ​
             <h3 class="sub-topic">List of known aliases.</h3>
