added nav Bar html code and link main.css and personal.css to personal.html

--- a/personal/personal.html
+++ b/personal/personal.html
@@ -6,9 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bob Ross</title>
+    <link rel="stylesheet" href="/Users/michellejohnson/workspace/celebrity-tribute-dustydivot-flares/main/main.css">
+    <link rel="stylesheet" href="/Users/michellejohnson/workspace/celebrity-tribute-dustydivot-flares/personal/personal.css">
 </head>
 
 <body>
+     <nav>
+        <div class="topnav">
+                <a class="active" href="#executive">Executive Summary</a>
+                <a href="#career">Career</a>
+                <a href="#person">Personal</a>
+                <a href="#newsFeed">News Feed</a>
+              </div>
+    </nav>
 
     <h1 class="name">Bob Ross</h1>
 
