--- a/personal/personal.html
+++ b/personal/personal.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bob Ross</title>
-    <link rel="stylesheet" href="/Users/michellejohnson/workspace/celebrity-tribute-dustydivot-flares/main/main.css">
-    <link rel="stylesheet" href="/Users/michellejohnson/workspace/celebrity-tribute-dustydivot-flares/personal/personal.css">
+    <link rel="stylesheet" href="main/main.css">
+    <link rel="stylesheet" href="personal.css">
 </head>
 
 <body>
