added more HTML content and more css features

--- a/executive/index.html
+++ b/executive/index.html
@@ -14,6 +14,8 @@
 <body>
     ​ 
     <h1 class="name">Bob Ross</h1>
+    <p id="quote">“There’s nothing wrong with having a tree as a friend.”</p>
+    <p id="quote">-Bob Ross</p>
     ​
     <h2 class="topic">Excutive Summary</h2>
     ​
@@ -23,7 +25,7 @@
             <!-- Each topic in artivle will have a class that = to "sub-topic" -->
             <h3 class="sub-topic">A portrait of Bob Ross</h3>
             <div>
-                <img src="https://en.wikipedia.org/wiki/Bob_Ross#/media/File:Bob_at_Easel.jpg" alt="bob ross">
+                <img src="https://upload.wikimedia.org/wikipedia/en/7/70/Bob_at_Easel.jpg" alt="bob ross">
                 <!-- If you need an image to be displayed use <img src="" alt=""> element -->
                 <p>Robert Norman Ross</p>
             </div>
@@ -39,7 +41,7 @@
                 </ul>
             </div>
             ​
-            <h3 class="sub-topic">List of known aliases.</h3>
+            <h3 class="sub-topic">List of known aliases</h3>
             <div>
                 <ul>
                     <ol>Bob Ross</ol>
@@ -47,7 +49,7 @@
                 </ul>
             </div>
             ​
-            <h3 class="sub-topic">Country of residence.</h3>
+            <h3 class="sub-topic">Country of residence</h3>
             <div>
                 <p>Bob Ross lived in New Smyrna Beach, Florida, United States. Prior to living in
                     Smyrna Beach, where he lived and died. Bob Ross served as a master sergeant of the
