adding a few things on css to test background

--- a/executive/index.html
+++ b/executive/index.html
@@ -12,6 +12,10 @@
 ​
 
 <body>
+
+    <div>
+        
+    </div>
     ​ 
     <h1 class="name">Bob Ross</h1>
     <p id="quote">“There’s nothing wrong with having a tree as a friend.”</p>
