--- a/personal/personal.html
+++ b/personal/personal.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bob Ross</title>
-    <link rel="stylesheet" href="main/main.css">
+    <link rel="stylesheet" href="../main/main.css">
     <link rel="stylesheet" href="personal.css">
 </head>
 
 <body>
-     <nav>
+    <nav>
         <div class="topnav">
                 <a class="active" href="#executive">Executive Summary</a>
                 <a href="#career">Career</a>
