fixed list elements on HTML

--- a/executive/index.html
+++ b/executive/index.html
@@ -13,10 +13,6 @@
 
 <body>
 
-    <div>
-        
-    </div>
-    ​ 
     <h1 class="name">Bob Ross</h1>
     <p id="quote">“There’s nothing wrong with having a tree as a friend.”</p>
     <p id="quote">-Bob Ross</p>
@@ -37,19 +33,19 @@
             <h3 class="sub-topic">Known collaborators with the artists</h3>
             <div>
                 <ul>
-                    <ol>In 1987, Hank Snow at the Grand Ole Opry in Nashville, Tennessee, welcomed Ross to the stage.
-                    </ol>
-                    <ol>Joan Alexandra Molinsky, known professionally as Joan Rivers, had Ross appear on The Joan Rivers
-                        Show</ol>
-                    <ol>In the early 1990s, Ross did several MTV promotional spots</ol>
+                    <li>In 1987, Hank Snow at the Grand Ole Opry in Nashville, Tennessee, welcomed Ross to the stage.
+                    </li>
+                    <li>Joan Alexandra Molinsky, known professionally as Joan Rivers, had Ross appear on The Joan Rivers
+                        Show</li>
+                    <li>In the early 1990s, Ross did several MTV promotional spots</li>
                 </ul>
             </div>
             ​
             <h3 class="sub-topic">List of known aliases</h3>
             <div>
                 <ul>
-                    <ol>Bob Ross</ol>
-                    <ol>Ross</ol>
+                    <li>Bob Ross</li>
+                    <li>Ross</li>
                 </ul>
             </div>
             ​
