Updated with div tags

--- a/career/career.html
+++ b/career/career.html
@@ -20,15 +20,16 @@
       <!-- id will be classified as the topic of your page -->
       <section id="Career">
         <article>
-          <h3 class="sub-topic">Known collaborators with the artists </h3>
           <div>
+            <h3 class="sub-topic">Known collaborators with the artists </h3>
+          
             <!-- Whats inside this div may be a <p> element or a <ul> -->
             <ul>
                 <li><a href="https://en.wikipedia.org/wiki/Bill_Alexander_(painter)">Bill Alexander</a></li>
                 <li><a href="https://www.hofcraft.com/annette-kowalski-biography.html">Annette Kowalski</a></li>
-                <li></li>
             </ul>
           </div>
+          <div>
     ​
           <h3 class="sub-topic">Talents and Skills</h3>
 
@@ -38,6 +39,7 @@
               <li>Painter</li>
               <li>Instructor</li>
           </ul>
+        </div>
           <div>
             <!-- If you need an image to be displayed use <img src="" alt=""> element -->
             <h3>Art Work</h3>
