updated li tags in html

--- a/career/career.html
+++ b/career/career.html
@@ -48,14 +48,15 @@
             <a href="https://paintingvalley.com/bob-ross-lighthouse-painting" title="Bob Ross Lighthouse Painting"><img src="https://paintingvalley.com/images/bob-ross-lighthouse-painting-1.jpg" width="350" /></a>
             <a href="https://paintingvalley.com/bob-ross-lighthouse-painting" title="Bob Ross Lighthouse Painting"><img src="https://paintingvalley.com/images/bob-ross-lighthouse-painting-12.jpg" width="350" /></a>
           </div>
-    ​
+
+    ​    <div>
           <h3 class="sub-topic">Places Bob called home.</h3>
-          <div>
+          
             <ol>
                 <li>Dayton Beach, FL: 1942-1961</li>
                 <li>Eielson Air Force, AK Base: 1961-1981</li>
                 <li>New Smyrna Beach, FL: 1981-1995</li>
-            </ol>
+            </ol> 
           </div>
     ​
         </article>
