added navBar html and linked main.css for Executive and News Feed

--- a/executive/index.html
+++ b/executive/index.html
@@ -7,11 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/executive/executive.css">
+    <link rel="stylesheet" href="../main/main.css">
     <title>Bob Ross</title>
 </head>
 ​
 
 <body>
+    <nav class="topnav">
+        <a href="#newsFeed">News Feed</a>
+        <a href="#career">Career</a>
+        <a href="#personal">Personal</a>
+        <a class="active" href="#executive">Executive Summary</a>
+    </nav>
 
     <h1 class="name">Bob Ross</h1>
     <p id="quote">“There’s nothing wrong with having a tree as a friend.”</p>
