--- a/newsFeed/newsFeed.html
+++ b/newsFeed/newsFeed.html
@@ -7,13 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bob Ross</title>
+    <link rel="stylesheet" href="../main/main.css">
+    
 </head>
 ​
 
 <body>
-    <nav>
-
+    <nav class="topnav">
+        <a class="active" href="#newsFeed">News Feed</a>
+        <a href="#career">Career</a>
+        <a href="#personal">Personal</a>
+        <a href="#executive">Executive Summary</a>
     </nav>
+
     ​ <header>
         <h1 class="name">Bob Ross</h1>​
         <h2 class="topic">News</h2>
