--- a/executive/index.html
+++ b/executive/index.html
@@ -12,6 +12,10 @@
 ​
 
 <body>
+    <!-- This is set so users can be taken back to top of page -->
+    <a name="top"></a>
+    <!-- This div below is whats needed to CSS the background -->
+    <div id="background"></div>
 
     <h1 class="name">Bob Ross</h1>
     <p id="quote">“There’s nothing wrong with having a tree as a friend.”</p>
@@ -21,17 +25,16 @@
     ​
     <!-- id will be classified as the topic of your page -->
     <section id="Executive">
-        <article>
             <!-- Each topic in artivle will have a class that = to "sub-topic" -->
-            <h3 class="sub-topic">A portrait of Bob Ross</h3>
             <div>
+                <h3 class="sub-topic">A portrait of Bob Ross</h3>
                 <img src="https://upload.wikimedia.org/wikipedia/en/7/70/Bob_at_Easel.jpg" alt="bob ross">
                 <!-- If you need an image to be displayed use <img src="" alt=""> element -->
                 <p>Robert Norman Ross</p>
             </div>
 
-            <h3 class="sub-topic">Known collaborators with the artists</h3>
             <div>
+            <h3 class="sub-topic">Known collaborators with the artists</h3>
                 <ul>
                     <li>In 1987, Hank Snow at the Grand Ole Opry in Nashville, Tennessee, welcomed Ross to the stage.
                     </li>
@@ -41,22 +44,20 @@
                 </ul>
             </div>
             ​
-            <h3 class="sub-topic">List of known aliases</h3>
             <div>
+            <h3 class="sub-topic">List of known aliases</h3>
                 <ul>
                     <li>Bob Ross</li>
                     <li>Ross</li>
                 </ul>
             </div>
             ​
-            <h3 class="sub-topic">Country of residence</h3>
             <div>
+                <h3 class="sub-topic">Country of residence</h3>
                 <p>Bob Ross lived in New Smyrna Beach, Florida, United States. Prior to living in
                     Smyrna Beach, where he lived and died. Bob Ross served as a master sergeant of the
                     U.S. Air Force Clinic at Eielson Air Force Base in Alaska.</p>
             </div>
-            ​
-        </article>
     </section>
     ​
     ​
