updated errors in p tag element

--- a/career/career.html
+++ b/career/career.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+<nav>
+
+</nav>
 
 <body>
     ​
@@ -15,7 +18,7 @@
 
       <p>During his 20-year tenure with the U.S. Air Force, Ross developed a taste for painting after attending an art class at the Anchorage U.S.O. club. He found himself frequently at odds with many of his painting instructors, who were more interested in abstract painting. In Ross' own words: "They'd tell you what makes a tree, but they wouldn't tell you how to paint a tree.
 
-        Ross was working as a part-time bartender when he discovered a TV show called The Magic of Oil Painting, hosted by German painter Bill Alexander. Alexander touted a 16th-century style of painting called "alla prima" (Italian for "first attempt"), better known as "wet-on-wet", that allowed him to finish a painting in a little under 30 minutes. Ross studied and became quite good at alla prima through Alexander's show, and began selling Alaskan landscapes painted on the inside of novelty gold-mining pans. Eventually, Ross's income from gold pan sales surpassed his military salary. He retired from the Air Force in 1981 with the rank of Master Sergeant after 20 years of service<a href="https://en.wikipedia.org/wiki/Bob_Ross">Learn More.</a></p>
+        Ross was working as a part-time bartender when he discovered a TV show called The Magic of Oil Painting, hosted by German painter Bill Alexander. Alexander touted a 16th-century style of painting called "alla prima" (Italian for "first attempt"), better known as "wet-on-wet", that allowed him to finish a painting in a little under 30 minutes. Ross studied and became quite good at alla prima through Alexander's show, and began selling Alaskan landscapes painted on the inside of novelty gold-mining pans. Eventually, Ross's income from gold pan sales surpassed his military salary. He retired from the Air Force in 1981 with the rank of Master Sergeant after 20 years of service....<a href="https://en.wikipedia.org/wiki/Bob_Ross"> Learn More.</a></p>
     ​
       <!-- id will be classified as the topic of your page -->
       <section id="Career">
@@ -53,9 +56,9 @@
           <h3 class="sub-topic">Places Bob called home.</h3>
           
             <ol>
-                <li>Dayton Beach, FL: 1942-1961</li>
-                <li>Eielson Air Force, AK Base: 1961-1981</li>
-                <li>New Smyrna Beach, FL: 1981-1995</li>
+                <li><a href="https://www.codb.us">Dayton Beach, FL</a>: 1942-1961</li>
+                <li><a href="https://www.eielson.af.mil">Eielson Air Force, AK Base</a>: 1961-1981</li>
+                <li><a href="https://www.cityofnsb.com">New Smyrna Beach, FL</a>: 1981-1995</li>
             </ol> 
           </div>
     ​
