added nav bar to page wrapped it in the body tags

--- a/career/career.html
+++ b/career/career.html
@@ -6,12 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<nav>
-
-</nav>
-
 <body>
-    ​
+    <nav class="topnav">
+        <a class="active" href="#newsFeed">News Feed</a>
+        <a href="#career">Career</a>
+        <a href="#personal">Personal</a>
+        <a href="#executive">Executive Summary</a>
+    </nav>
+    
       <h1 class="name">Bob Ross</h1>
     ​
       <h2 class="topic">Career </h2>
