added nav bar and main.css to career html

--- a/career/career.html
+++ b/career/career.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Career</title>
+    <link rel="stylesheet" href="../main/main.css">
+
 </head>
 <body>
     <nav class="topnav">
-        <a class="active" href="#newsFeed">News Feed</a>
-        <a href="#career">Career</a>
+        <a href="#newsFeed">News Feed</a>
+        <a class="active" href="#career">Career</a>
         <a href="#personal">Personal</a>
         <a href="#executive">Executive Summary</a>
     </nav>
