linked pages in nav bar

--- a/career/career.html
+++ b/career/career.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <nav class="topnav">
-        <a href="#newsFeed">News Feed</a>
-        <a class="active" href="#career">Career</a>
-        <a href="#personal">Personal</a>
-        <a href="#executive">Executive Summary</a>
+        <a href="../newsFeed/newsFeed.html">News Feed</a>
+        <a class="active" href="../career/career.html">Career</a>
+        <a href="../personal/personal.html">Personal</a>
+        <a href="../executive/index.html">Executive Summary</a>
     </nav>
     
       <h1 class="name">Bob Ross</h1>
