--- a/executive/index.html
+++ b/executive/index.html
@@ -14,10 +14,10 @@
 
 <body>
     <nav class="topnav">
-        <a href="#newsFeed">News Feed</a>
-        <a href="#career">Career</a>
-        <a href="#personal">Personal</a>
-        <a class="active" href="#executive">Executive Summary</a>
+        <a href="../newsFeed/newsFeed.html">News Feed</a>
+        <a href="../career/career.html">Career</a>
+        <a href="..//personal/personal.html">Personal</a>
+        <a class="active" href="../executive/index.html">Executive Summary</a>
     </nav>
 
     <h1 class="name">Bob Ross</h1>
