--- a/newsFeed/newsFeed.html
+++ b/newsFeed/newsFeed.html
@@ -14,10 +14,10 @@
 
 <body>
     <nav class="topnav">
-        <a class="active" href="#newsFeed">News Feed</a>
-        <a href="#career">Career</a>
-        <a href="#personal">Personal</a>
-        <a href="#executive">Executive Summary</a>
+        <a class="active" href="../newsFeed/newsFeed.html">News Feed</a>
+        <a href="../career/career.html">Career</a>
+        <a href="../personal/personal.html">Personal</a>
+        <a href="../executive/index.html">Executive Summary</a>
     </nav>
 
     ​ <header>
