--- a/personal/personal.html
+++ b/personal/personal.html
@@ -12,10 +12,10 @@
 
 <body>
     <nav class="topnav">
-        <a href="#newsFeed">News Feed</a>
-        <a href="#career">Career</a>
-        <a class="active" href="#personal">Personal</a>
-        <a href="#executive">Executive Summary</a>
+        <a href="../newsFeed/newsFeed.html">News Feed</a>
+        <a href="../career/career.html">Career</a>
+        <a class="active" href="../personal/personal.html">Personal</a>
+        <a href="../executive/index.html">Executive Summary</a>
     </nav>
 
     <header>
