--- a/newsFeed/newsFeed.html
+++ b/newsFeed/newsFeed.html
@@ -13,17 +13,15 @@
 ​
 
 <body>
-<<<<<<< HEAD
     <a name="top"></a>
+    <!--Here is the conflict. Nav bar was added to the top.-->
     <nav>
 
-=======
     <nav class="topnav">
         <a class="active" href="#newsFeed">News Feed</a>
         <a href="#career">Career</a>
         <a href="#personal">Personal</a>
         <a href="#executive">Executive Summary</a>
->>>>>>> e0859dfac28594cf84c3ac53d36dd7c900877bcd
     </nav>
 
     ​ <header>
