fixed navbar typo

--- a/career/career.html
+++ b/career/career.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <nav class="topnav">
-        <a class="active" href="#newsFeed">News Feed</a>
-        <a href="#career">Career</a>
+        <a class="active" href="#career">Career</a>
+        <a href="#newsFeed">News Feed</a>
         <a href="#personal">Personal</a>
         <a href="#executive">Executive Summary</a>
     </nav>
