--- a/personal/personal.html
+++ b/personal/personal.html
@@ -11,11 +11,18 @@
 </head>
 
 <body>
+    <!-- nav bar -->
     <nav class="topnav">
         <a href="#newsFeed">News Feed</a>
         <a href="#career">Career</a>
         <a class="active" href="#personal">Personal</a>
         <a href="#executive">Executive Summary</a>
+
+        <!-- logo -->
+        <h2 class="navbar-brand brand-name">
+            <a href="../executive/index.html"><img class="img-responsive2"       
+            src="https://cdn.shopify.com/s/files/1/0049/7392/files/bob_ross_logo_large.gif?v=1516906984"></a>
+        </h2>
     </nav>
 
     <header>
