added the css style to main.css. This gives backgrounds and I also added quotes to each page

--- a/career/career.html
+++ b/career/career.html
@@ -13,9 +13,12 @@
         <a href="#personal">Personal</a>
         <a href="#executive">Executive Summary</a>
     </nav>
+
+    <div id="background"></div>
     
       <h1 class="name">Bob Ross</h1>
-    ​
+    ​  <p id="quote">“Believe that you can do it cause you can do it.”</p>
+      <p id="quote">-Bob Ross</p>
       <h2 class="topic">Career </h2>
 
       <p>During his 20-year tenure with the U.S. Air Force, Ross developed a taste for painting after attending an art class at the Anchorage U.S.O. club. He found himself frequently at odds with many of his painting instructors, who were more interested in abstract painting. In Ross' own words: "They'd tell you what makes a tree, but they wouldn't tell you how to paint a tree.
