--- a/personal/personal.html
+++ b/personal/personal.html
@@ -18,9 +18,12 @@
         <a href="#executive">Executive Summary</a>
     </nav>
 
+    <div id="background"></div>
+
     <header>
         <h1 class="name">Bob Ross</h1>
-
+        <p id="quote">“Let's get crazy.”</p>
+        <p id="quote">-Bob Ross</p>
         <h2 class="topic">Personal</h2>
     </header>
 
