--- a/newsFeed/newsFeed.html
+++ b/newsFeed/newsFeed.html
@@ -20,8 +20,12 @@
         <a href="#executive">Executive Summary</a>
     </nav>
 
+    <div id="background"></div>
+
     ​ <header>
         <h1 class="name">Bob Ross</h1>​
+        <p id="quote">“We don't make mistakes, just happy little accidents.”</p>
+        <p id="quote">-Bob Ross</p>
         <h2 class="topic">News</h2>
         ​
     </header>
