added logo html and reformated html html

--- a/personal/personal.html
+++ b/personal/personal.html
@@ -13,16 +13,20 @@
 <body>
     <!-- nav bar -->
     <nav class="topnav">
-        <a href="../newsFeed/newsFeed.html">News Feed</a>
-        <a href="../career/career.html">Career</a>
-        <a class="active" href="../personal/personal.html">Personal</a>
-        <a href="../executive/index.html">Executive Summary</a>
+        <div>
+            <a href="../newsFeed/newsFeed.html">News Feed</a>
+            <a href="../career/career.html">Career</a>
+            <a class="active" href="../personal/personal.html">Personal</a>
+            <a href="../executive/index.html">Executive Summary</a>
+        </div>
 
         <!-- logo -->
-        <h2 class="navbar-brand brand-name">
+        <div>
+            <h2 class="navbar-brand brand-name">
                 <a href="../executive/index.html"><img class="img-responsive2"       
                 src="https://cdn.shopify.com/s/files/1/0049/7392/files/bob_ross_logo_large.gif?v=1516906984"></a>
             </h2>
+        </div>
     </nav>
 
     <header>
