--- a/executive/index.html
+++ b/executive/index.html
@@ -17,17 +17,22 @@
     <a name="top"></a>
     <!-- This div below is whats needed to CSS the background -->
     <div id="background"></div>
+
     <nav class="topnav">
-        <a href="../newsFeed/newsFeed.html">News Feed</a>
-        <a href="../career/career.html">Career</a>
-        <a href="..//personal/personal.html">Personal</a>
-        <a class="active" href="../executive/index.html">Executive Summary</a>
-    
+        <div>
+            <a href="../newsFeed/newsFeed.html">News Feed</a>
+            <a href="../career/career.html">Career</a>
+            <a href="..//personal/personal.html">Personal</a>
+            <a class="active" href="../executive/index.html">Executive Summary</a>
+        </div>
+
     <!-- logo -->
-    <h2 class="navbar-brand brand-name">
-            <a href="../executive/index.html"><img class="img-responsive2"       
+        <div>
+            <h2 class="navbar-brand brand-name">
+                <a href="../executive/index.html"><img class="img-responsive2"       
             src="https://cdn.shopify.com/s/files/1/0049/7392/files/bob_ross_logo_large.gif?v=1516906984"></a>
-        </h2>
+            </h2>
+        </div>
         
     </nav>
 
