--- a/newsFeed/newsFeed.html
+++ b/newsFeed/newsFeed.html
@@ -14,16 +14,20 @@
 
 <body>
     <nav class="topnav">
-        <a class="active" href="../newsFeed/newsFeed.html">News Feed</a>
-        <a href="../career/career.html">Career</a>
-        <a href="../personal/personal.html">Personal</a>
-        <a href="../executive/index.html">Executive Summary</a>
-    
+        <div>
+            <a class="active" href="../newsFeed/newsFeed.html">News Feed</a>
+            <a href="../career/career.html">Career</a>
+            <a href="../personal/personal.html">Personal</a>
+            <a href="../executive/index.html">Executive Summary</a>
+        </div>
+
     <!-- logo -->
-    <h2 class="navbar-brand brand-name">
+        <div>
+            <h2 class="navbar-brand brand-name">
             <a href="../executive/index.html"><img class="img-responsive2"       
             src="https://cdn.shopify.com/s/files/1/0049/7392/files/bob_ross_logo_large.gif?v=1516906984"></a>
-        </h2>
+            </h2>
+        </div>
     </nav>
 
     ​ <header>
