added in htmls and added main.css for background

--- a/career/career.html
+++ b/career/career.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Career</title>
     <link rel="stylesheet" href="../main/main.css">
-
+    
 </head>
 <body>
+    <div id="background"></div> 
     <nav class="topnav">
         <a href="../newsFeed/newsFeed.html">News Feed</a>
         <a class="active" href="../career/career.html">Career</a>
@@ -17,7 +18,8 @@
     </nav>
     
       <h1 class="name">Bob Ross</h1>
-    ​
+      <p id="quote">“lets get a little crazy here”</p>
+      <p id="quote">-Bob Ross</p>    ​
       <h2 class="topic">Career </h2>
 
       <p>During his 20-year tenure with the U.S. Air Force, Ross developed a taste for painting after attending an art class at the Anchorage U.S.O. club. He found himself frequently at odds with many of his painting instructors, who were more interested in abstract painting. In Ross' own words: "They'd tell you what makes a tree, but they wouldn't tell you how to paint a tree.
