--- a/newsFeed/newsFeed.html
+++ b/newsFeed/newsFeed.html
@@ -13,6 +13,7 @@
 ​
 
 <body>
+    <div id="background"></div>    
     <nav class="topnav">
         <a class="active" href="../newsFeed/newsFeed.html">News Feed</a>
         <a href="../career/career.html">Career</a>
@@ -22,6 +23,8 @@
 
     ​ <header>
         <h1 class="name">Bob Ross</h1>​
+        <p id="quote">“We don't make mistakes, just happy little accidents.”</p>
+        <p id="quote">-Bob Ross</p>
         <h2 class="topic">News</h2>
         ​
     </header>
