--- a/personal/personal.html
+++ b/personal/personal.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div id="background"></div> 
     <nav class="topnav">
         <a href="../newsFeed/newsFeed.html">News Feed</a>
         <a href="../career/career.html">Career</a>
@@ -20,7 +21,8 @@
 
     <header>
         <h1 class="name">Bob Ross</h1>
-
+        <p id="quote">“Believe that you can do it cause you can do it.”</p>
+        <p id="quote">-Bob Ross</p>
         <h2 class="topic">Personal</h2>
     </header>
 
