--- a/newsFeed/newsFeed.html
+++ b/newsFeed/newsFeed.html
@@ -13,10 +13,10 @@
 ​
 
 <body>
-    <div id="background"></div>
+    <!-- This is set so users can be taken back to top of page -->
     <a name="top"></a>
-    <!--Here is the conflict. Nav bar was added to the top.-->
-    <nav>
+    <!-- This div below is whats needed to CSS the background -->
+    <div id="background"></div>
 
     <nav class="topnav">
         <div>
