--- a/career/career.html
+++ b/career/career.html
@@ -12,11 +12,22 @@
 
 <body>
   <div id="background"></div>
+  
   <nav class="topnav">
-    <a href="../newsFeed/newsFeed.html">News Feed</a>
-    <a class="active" href="../career/career.html">Career</a>
-    <a href="../personal/personal.html">Personal</a>
-    <a href="../executive/index.html">Executive Summary</a>
+    <div>
+      <a href="../newsFeed/newsFeed.html">News Feed</a>
+      <a class="active" href="../career/career.html">Career</a>
+      <a href="../personal/personal.html">Personal</a>
+      <a href="../executive/index.html">Executive Summary</a>
+  </div>
+  
+    <!-- logo -->
+    <div>
+      <h2 class="navbar-brand brand-name">
+        <a href="../executive/index.html"><img class="img-responsive2"
+            src="https://cdn.shopify.com/s/files/1/0049/7392/files/bob_ross_logo_large.gif?v=1516906984"></a>
+      </h2>
+    </div>
   </nav>
 
   <h1 class="name">Bob Ross</h1>
